--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
+appdirs==1.4.3
+backports.shutil-get-terminal-size==1.0.0
+decorator==4.0.11
 dj-database-url==0.4.1
 Django==1.10.4
+django-bootstrap3==8.2.3
+enum34==1.1.6
+funcsigs==1.0.2
 gunicorn==19.6.0
+ipdb==0.10.3
+ipython==5.3.0
+ipython-genutils==0.2.0
+model-mommy==1.3.2
+packaging==16.8
+pathlib2==2.2.1
+pbr==3.0.1
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.14
 psycopg2==2.6.2
+ptyprocess==0.5.1
+Pygments==2.2.0
+pyparsing==2.2.0
+scandir==1.5
+simplegeneric==0.8.1
+six==1.10.0
+traitlets==4.3.2
+wcwidth==0.1.7
 whitenoise==3.2
